# lemonade-podman

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.pgvector  README.md  ansible-playbook.yml  ansible.cfg  custom_guardrail.py  docker-compose.online.yml  docker-compose.pgvector.yml  docker-compose.proxied-models.example.yml  docker-compose.rag.yml  docker-compose.yml  generate_model_configs.sh  litellm.example.yaml  models.sample.txt  pyproject.toml  sample.env  stack.drawio  traefik-hosts.example.yaml  traefik.yaml
.github/workflows/: build-and-push.yml
ansible/: README.md  playbook.yml
ansible/group_vars/: all.yml
inference/: .dockerignore  Dockerfile  README.md  pyproject.toml
inference/app/: main.py
inference/app/src/: dependencies.py
inference/app/src/inference/: install.py  run.py
inference/app/src/routes/: inference.py
inference/app/src/routes/guardrail/: __init__.py  models.py  router.py
inference/app/src/routes/guardrail/routes/: detect_jailbreak.py  gibberish_text.py
lemonade/: Dockerfile  pyproject.toml
patches/: README.md  pgvector-768-dimensions.patch  pgvector-fix-file-counts-sql.patch
pg-vector/: Dockerfile  postgresql.conf
quadlets/: cloudflared.container  cloudflared.network  lemonade.container  lemonade.network  lemonade.volume  lemonade@.container  litellm-db.container  litellm-db.network  litellm-db.volume  litellm.container  traefik.container
quadlets/conf/: litellm.sample.yaml  traefik-hosts.sample.yaml
tests/: load_test.py  pyproject.toml  sample.env
vars/: litellm.sample.env
vars/example/: litellm.sample.env  (+1 more)
(+11 files in other folders)
